--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <li>soy bondadoso</li>
             <li>Me gusta la onestidad</li>
         </ul>
+
+        <h2>Links de interes</h2>
+        <ol>
+            <li><a href="./practicads/calculadora.html"></a></li>
+        </ol>
     
         <h3 id="especial">Horario</h3>
         <table class="tbl" border="1">
