--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <li>Me gusta la onestidad</li>
         </ul>
 
-        <h2>Links de interes</h2>
+        <h3 class="hob">Links de interes</h3>
         <ol>
-            <li><a href="./practicads/calculadora.html"></a></li>
+            <li><a href="./practicads/calculadora.html">Calculadora</a></li>
         </ol>
     
         <h3 id="especial">Horario</h3>
