--- a/practicads/calculadora.html
+++ b/practicads/calculadora.html
@@ -15,10 +15,10 @@
         <input class="input" type="number" id="vl2"> <br>
         
         <div class="botonera">
-          <button class="boton" onclick="calcular()">Suma</button>
-          <button class="boton" onclick="calcular()">Resta</button>
-          <button class="boton" onclick="calcular()">Multiplicacion</button>
-          <button class="boton" onclick="calcular()">Division</button>
+          <button class="boton" onclick="suma()">Suma</button>
+          <button class="boton" onclick="resta()">Resta</button>
+          <button class="boton" onclick="multiplicaion()">Multiplicacion</button>
+          <button class="boton" onclick="divicion()">Division</button>
         </div>
   
         <h3 class="subtitulo">resultado</h3>
