--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h3 class="hob">Links de interes</h3>
         <ol>
             <li><a href="./practicads/calculadora.html">Calculadora</a></li>
+            <li> <a href="./practicads/validaciones/index.html">VALIDACIONES</a></li>
         </ol>
     
         <h3 id="especial">Horario</h3>
